--- a/WeeklyPlanner/WeeklyPlanner.csproj
+++ b/WeeklyPlanner/WeeklyPlanner.csproj
@@ -50,6 +50,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="ReachFramework" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -93,9 +96,15 @@
     <Compile Include="Items\ChecklistItem.cs" />
     <Compile Include="Items\LegendItem.cs" />
     <Compile Include="Items\PlannerItem.cs" />
+    <Compile Include="Items\TestLegendItem.xaml.cs">
+      <DependentUpon>TestLegendItem.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Items\ToDoItem.cs" />
-    <Compile Include="Items\PlannerItemCollection.cs" />
     <Page Include="DatePicker.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Items\TestLegendItem.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
