--- a/WeeklyPlanner/WeeklyPlanner.csproj
+++ b/WeeklyPlanner/WeeklyPlanner.csproj
@@ -50,6 +50,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="GongSolutions.WPF.DragDrop, Version=2.0.0.0, Culture=neutral, PublicKeyToken=91f1945125b7a587, processorArchitecture=MSIL">
+      <HintPath>packages\gong-wpf-dragdrop.2.2.0\lib\net47\GongSolutions.WPF.DragDrop.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -90,21 +93,42 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Controls\FormattedWatermarkTextBox.xaml.cs">
+      <DependentUpon>FormattedWatermarkTextBox.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Subtask.xaml.cs">
+      <DependentUpon>Subtask.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\TextFormattingButtons.xaml.cs">
+      <DependentUpon>TextFormattingButtons.xaml</DependentUpon>
+    </Compile>
     <Compile Include="DatePicker.xaml.cs">
       <DependentUpon>DatePicker.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Items\ChecklistItem.cs" />
-    <Compile Include="Items\LegendItem.cs" />
-    <Compile Include="Items\PlannerItem.cs" />
-    <Compile Include="Items\TestLegendItem.xaml.cs">
-      <DependentUpon>TestLegendItem.xaml</DependentUpon>
+    <Compile Include="EventDialog.xaml.cs">
+      <DependentUpon>EventDialog.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Items\ToDoItem.cs" />
+    <Compile Include="Models\ChecklistEntry.cs" />
+    <Compile Include="Models\DayEntry.cs" />
+    <Compile Include="Models\Enums.cs" />
+    <Compile Include="Models\EventItem.cs" />
+    <Page Include="Controls\FormattedWatermarkTextBox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\Subtask.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\TextFormattingButtons.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="DatePicker.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Items\TestLegendItem.xaml">
+    <Page Include="EventDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -129,7 +153,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PlannerFile.cs" />
+    <Compile Include="Models\LegendItem.cs" />
+    <Compile Include="Models\PlannerEntry.cs" />
+    <Compile Include="Models\PlannerFile.cs" />
+    <Compile Include="Models\TaskItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
