--- a/WeeklyPlanner/WeeklyPlanner.csproj
+++ b/WeeklyPlanner/WeeklyPlanner.csproj
@@ -151,12 +151,19 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Options.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\LegendItem.cs" />
     <Compile Include="Models\PlannerEntry.cs" />
     <Compile Include="Models\PlannerFile.cs" />
     <Compile Include="Models\TaskItem.cs" />
+    <Compile Include="Options.xaml.cs">
+      <DependentUpon>Options.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
